--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha tests/**/*test.js --reporter spec"
+    "test": "./node_modules/.bin/mocha tests/**/*test.js --reporter spec"
   },
   "repository": {
     "type": "git",
